[gd_scene load_steps=13 format=3 uid="uid://cr34unq0hqq3g"]

[ext_resource type="Script" path="res://scripts/charactercontroller.gd" id="1_34wqk"]
[ext_resource type="Texture2D" uid="uid://b8s3r8074rn5v" path="res://assets/players/elf_boy.png" id="2_q6e3y"]
[ext_resource type="PackedScene" uid="uid://brevp6emh8irh" path="res://scenes/objects/weapons/elfWeapon.tscn" id="3_w4uu2"]

[sub_resource type="Animation" id="Animation_4kvsw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_47jv8"]
resource_name = "player_idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_80r0u"]
resource_name = "player_jump"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 4, 5, 8]
}

[sub_resource type="Animation" id="Animation_lvnrq"]
resource_name = "player_land"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 5, 4, 0]
}

[sub_resource type="Animation" id="Animation_80ga8"]
resource_name = "player_run"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [4, 1, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_sefla"]
resource_name = "player_squat"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tjq8m"]
_data = {
"RESET": SubResource("Animation_4kvsw"),
"player_idle": SubResource("Animation_47jv8"),
"player_jump": SubResource("Animation_80r0u"),
"player_land": SubResource("Animation_lvnrq"),
"player_run": SubResource("Animation_80ga8"),
"player_squat": SubResource("Animation_sefla")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kwhyp"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jf4jf"]
size = Vector2(17.435, 20.915)

[node name="elf" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_34wqk")

[node name="playerAnim" type="AnimationPlayer" parent="."]
root_node = NodePath("../charSprite")
libraries = {
"": SubResource("AnimationLibrary_tjq8m")
}
autoplay = "player_idle"

[node name="playerCollider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kwhyp")

[node name="charSprite" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_q6e3y")
hframes = 9

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3.345, 3.345)

[node name="weaponController" parent="." instance=ExtResource("3_w4uu2")]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_jf4jf")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
